--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -69,7 +69,7 @@
                         <li>
                             <a class="dropdown-item" th:href="@{/matches}" th:text="#{all.matches}"></a>
                         </li>
-                        <li>
+                        <li th:if="${@groupAvailabilityUtil.hasUserBetsWithJoker()}">
                             <hr class="dropdown-divider">
                         </li>
                         <li th:if="${@groupAvailabilityUtil.hasUserBetsWithJoker()}" class="divider"
