--- a/src/main/resources/templates/bet/extra_others.html
+++ b/src/main/resources/templates/bet/extra_others.html
@@ -8,7 +8,7 @@
 			<h1 th:text="#{bet.extra.others.title}"></h1>
 			<div class="row">
 				<div class="col-12 col-sm-6 col-md-4" th:each="extraBet : ${allExtraBets}">
-					<div class="card">
+					<div class="card mb-3">
 						<div class="card-header">
                             <div class="row">
                                 <div class="col-9">
