--- a/src/main/resources/templates/info/statistic.html
+++ b/src/main/resources/templates/info/statistic.html
@@ -22,20 +22,26 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-12 col-sm-6 col-md-4" th:each="statistic : ${statisticList}" style="max-height: 176px;">
-					<div class="card">
+				<div class="col-12 col-sm-6 col-md-4" th:each="statistic : ${statisticList}">
+					<div class="card mb-3">
 						<div class="card-header">
-							<span th:replace="~{fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(statistic.username)})}"></span>
-							<span th:text="${statistic.username} + ' (' + ${statistic.getSum()} + ') '"></span>
-							<span th:if="${statistic.minPointsCandidate}" class="fas fa-lightbulb red" aria-hidden="true"></span>
-							<span th:if="${statistic.maxPointsCandidate}" class="fas fa-star blue" aria-hidden="true"></span>
-							<span>,</span>
-							<img class="flag" th:src="@{${statistic.favoriteCountry.getIconPath()}}"/>
-							<span th:text="' (' + ${statistic.pointsFavoriteCountry} + ')'"></span>
-							<span th:if="${statistic.maxFavoriteCountryCandidate}" class="fas fa-star blue" aria-hidden="true"></span>
-							<span>,</span>
-							<span class="fas fa-magic" aria-hidden="true"></span>
-							<span th:text="'(' + ${statistic.getPointsForExtraBets()} + ')'"></span>
+                            <div class="row">
+                                <div class="col-2">
+                                    <span th:replace="~{fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(statistic.username)})}"></span>
+                                </div>
+                                <div class="col-10">
+                                    <span th:text="${statistic.username} + ' (' + ${statistic.getSum()} + ') '"></span>
+                                    <span th:if="${statistic.minPointsCandidate}" class="fas fa-lightbulb red" aria-hidden="true"></span>
+                                    <span th:if="${statistic.maxPointsCandidate}" class="fas fa-star blue" aria-hidden="true"></span>
+                                    <span>,</span>
+                                    <img class="flag" th:src="@{${statistic.favoriteCountry.getIconPath()}}"/>
+                                    <span th:text="' (' + ${statistic.pointsFavoriteCountry} + ')'"></span>
+                                    <span th:if="${statistic.maxFavoriteCountryCandidate}" class="fas fa-star blue" aria-hidden="true"></span>
+                                    <span>,</span>
+                                    <span class="fas fa-magic" aria-hidden="true"></span>
+                                    <span th:text="'(' + ${statistic.getPointsForExtraBets()} + ')'"></span>
+                                </div>
+                            </div>
 					   </div>
 					   <div class="card-body">
 						   <div class="table-responsive">
