--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -236,13 +236,13 @@
                         <img th:src="${@languageUtil.getImageLanguageIconPath()}" />
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="language">
-                        <li><a th:href="${@languageUtil.buildUrl('de')}" class="dropdown-item language"><img src="/images/lang/de.png" th:text="' '+#{language.de}" /></a></li>
-                        <li><a th:href="${@languageUtil.buildUrl('en')}" class="dropdown-item language"><img src="/images/lang/en.png" th:text="' '+#{language.en}" /></a></li>
-                        <li><a th:href="${@languageUtil.buildUrl('pl')}" class="dropdown-item language"><img src="/images/lang/pl.png" th:text="' '+#{language.pl}" /></a></li>
-                        <li><a th:href="${@languageUtil.buildUrl('es')}" class="dropdown-item language"><img src="/images/lang/es.png" th:text="' '+#{language.es}" /></a></li>
-                        <li><a th:href="${@languageUtil.buildUrl('ca')}" class="dropdown-item language"><img src="/images/lang/ca.png" th:text="' '+#{language.ca}" /></a></li>
-                        <li><a th:href="${@languageUtil.buildUrl('cze')}" class="dropdown-item language"><img src="/images/lang/cze.png" th:text="' '+#{language.cze}" /></a></li>
-                        <li><a th:href="${@languageUtil.buildUrl('sv')}" class="dropdown-item language"><img src="/images/lang/sv.png" th:text="' '+#{language.sv}" /></a></li>
+                        <li><a th:href="${@languageUtil.buildUrl('de')}" class="dropdown-item language"><img src="/images/lang/de.png" th:text="' '+#{language.de}" alt="de"/></a></li>
+                        <li><a th:href="${@languageUtil.buildUrl('en')}" class="dropdown-item language"><img src="/images/lang/en.png" th:text="' '+#{language.en}" alt="en"/></a></li>
+                        <li><a th:href="${@languageUtil.buildUrl('pl')}" class="dropdown-item language"><img src="/images/lang/pl.png" th:text="' '+#{language.pl}" alt="pl"/></a></li>
+                        <li><a th:href="${@languageUtil.buildUrl('es')}" class="dropdown-item language"><img src="/images/lang/es.png" th:text="' '+#{language.es}" alt="es"/></a></li>
+                        <li><a th:href="${@languageUtil.buildUrl('ca')}" class="dropdown-item language"><img src="/images/lang/ca.png" th:text="' '+#{language.ca}" alt="ca"/></a></li>
+                        <li><a th:href="${@languageUtil.buildUrl('cze')}" class="dropdown-item language"><img src="/images/lang/cze.png" th:text="' '+#{language.cze}" alt="cze"/></a></li>
+                        <li><a th:href="${@languageUtil.buildUrl('sv')}" class="dropdown-item language"><img src="/images/lang/sv.png" th:text="' '+#{language.sv}" alt="sv"/></a></li>
                     </ul>
                 </li>
                 <span class="navbar-text me-3" th:text="${@webSecurityUtil.getCurrentUsername()}"></span>
