--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
                 <h1 class="h3 mb-3 fw-normal" th:text="'FredBet - ' + #{login.title.short}">Please sign in</h1>
 
                 <div class="form-floating">
-                    <input type="email" class="form-control" id="floatingInput" name="username" th:placeholder="#{login.placeholder.username}">
+                    <input type="text" class="form-control" id="floatingInput" name="username" th:placeholder="#{login.placeholder.username}">
                     <label for="floatingInput" th:text="#{login.placeholder.username}"></label>
                 </div>
                 <div class="form-floating">
@@ -28,19 +28,17 @@
                     <label for="floatingPassword" th:text="#{login.placeholder.password}">Password</label>
                 </div>
 
-                <div class="form-check text-start my-3">
-                    <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault" name="remember-me">
-                    <label class="form-check-label" for="flexCheckDefault">Auto-Login</label>
-                    <span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip"
-                          data-placement="top" th:title="#{login.autologin.tooltip}"></span>
-                </div>
-                <button class="btn btn-primary w-100 py-2" type="submit" th:value="#{login.button.login}">
-                    <i class="fas fa-sign-in-alt"></i>&nbsp;<span th:text="#{login.button.login}"></span>
-                </button>
-
                 <div class="row mt-3">
-                    <div class="col-4 col-sm-2">
-                        <div class="form-group">
+                    <div class="col-6">
+                        <div class="form-check text-start my-3">
+                            <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault" name="remember-me">
+                            <label class="form-check-label" for="flexCheckDefault">Auto-Login</label>
+                            <span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip"
+                                  data-placement="top" th:title="#{login.autologin.tooltip}"></span>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="mt-1">
                             <div class="dropdown">
                                 <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     <img th:src="${@languageUtil.getImageLanguageIconPath()}" alt="language"/>
@@ -57,6 +55,13 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <button class="btn btn-primary w-100 py-2" type="submit" th:value="#{login.button.login}">
+                    <i class="fas fa-sign-in-alt"></i>&nbsp;<span th:text="#{login.button.login}"></span>
+                </button>
+
+                <div class="row mt-3">
                     <div class="col-12 col-sm-6">
                         <div class="form-group">
                             <a th:if="${@runtimeSettingsUtil.getSettings().isSelfRegistrationEnabled()}" href="#" class="btn btn-default" th:href="@{/registration}" th:text="#{registration.link.text}"></a>
