--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -31,7 +31,7 @@
                 <div class="row mt-3">
                     <div class="col-6">
                         <div class="form-check text-start my-3">
-                            <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault" name="remember-me">
+                            <input class="form-check-input" type="checkbox" value="remember-me" id="flexCheckDefault" name="remember-me" checked>
                             <label class="form-check-label" for="flexCheckDefault">Auto-Login</label>
                             <span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip"
                                   data-placement="top" th:title="#{login.autologin.tooltip}"></span>
@@ -62,9 +62,9 @@
                 </button>
 
                 <div class="row mt-3">
-                    <div class="col-12 col-sm-6">
+                    <div class="col-12">
                         <div class="form-group">
-                            <a th:if="${@runtimeSettingsUtil.getSettings().isSelfRegistrationEnabled()}" href="#" class="btn btn-default" th:href="@{/registration}" th:text="#{registration.link.text}"></a>
+                            <a th:if="${@runtimeSettingsUtil.getSettings().isSelfRegistrationEnabled()}" class="btn btn-light" th:href="@{/registration}" th:text="#{registration.link.text}"></a>
                         </div>
                     </div>
                 </div>
