update login page

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,8 +13,8 @@
                 <span th:text="${errorMsg}"></span>
             </div>
             <form class="form" th:action="@{/login}" method="post">
-                <div class="logo text-center mb-5">
-                    <i class="fas fa-thumbs-up fa-8x"></i>
+                <div class="text-center mb-5">
+                    <i class="fas fa-thumbs-up fa-8x logo-color"></i>
                 </div>
 
                 <h1 class="h3 mb-3 fw-normal" th:text="'FredBet - ' + #{login.title.short}">Please sign in</h1>
