--- a/src/main/resources/static/css/pages/login.css
+++ b/src/main/resources/static/css/pages/login.css
@@ -11,7 +11,7 @@ html, body {
     z-index: 2;
 }
 
-.form-signin input[type="email"] {
+.form-signin input[type="text"] {
     margin-bottom: -1px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
@@ -23,6 +23,6 @@ html, body {
     border-top-right-radius: 0;
 }
 
-.logo {
-    color: #337ab7;
+.logo-color {
+    color: #0b5ed7;
 }
