--- a/src/main/resources/templates/admin/excel_import.html
+++ b/src/main/resources/templates/admin/excel_import.html
@@ -19,7 +19,7 @@
                                 </div>
                             </div>
                             <div class="card-body">
-                                <input id="myFile" type="file" th:field="*{myFile}" class="form-control btn btn-default btn-file" />
+                                <input id="myFile" type="file" th:field="*{myFile}" class="form-control btn btn-light btn-file" />
                                 <div class="row mt-3">
                                     <div class="col-6">
                                         <input type="submit" class="btn btn-primary" th:value="#{excel.upload.button}" />
