--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -93,7 +93,7 @@
 							<div class="col-12">
 								<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
 								<button type="button" class="btn btn-info" onclick="runRandomDice()"><i class="fas fa-dice" aria-hidden="true"></i></button>
-								<a href="#" th:href="@{${betCommand.getBackUrl()}}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
+								<a href="#" th:href="@{${betCommand.getBackUrl()}}" class="btn btn-light" role="button" th:text="#{button.cancel}"></a>
 							</div>
 						</div>
 						<div class="row mt-3">
