--- a/src/main/resources/templates/fragments/delete_confirm.html
+++ b/src/main/resources/templates/fragments/delete_confirm.html
@@ -11,7 +11,7 @@
                     </div>
 					<div class="modal-footer">
 						<a th:href="@{${href}}" class="btn btn-danger" th:text="#{button.delete}">Delete</a>
-						<button type="button" class="btn btn-default" data-bs-dismiss="modal" th:text="#{button.cancel}">Cancel</button>
+						<button type="button" class="btn btn-light" data-bs-dismiss="modal" th:text="#{button.cancel}">Cancel</button>
 					</div>
 				</div>
 			</div>
