--- a/src/main/resources/templates/image/image_group.html
+++ b/src/main/resources/templates/image/image_group.html
@@ -33,7 +33,7 @@
                     <div class="col-12 col-sm-6 col-md-4">
                         <div class="mb-3">
                             <input type="submit" class="btn btn-primary" th:value="#{button.save}" />
-                            <a href="#" th:href="@{/image/show}" class="btn btn-default" role="button" th:text="#{button.backToImageUpload}"></a>
+                            <a href="#" th:href="@{/image/show}" class="btn btn-light" role="button" th:text="#{button.backToImageUpload}"></a>
                         </div>
                     </div>
                 </div>
