--- a/src/main/resources/templates/image/image_upload.html
+++ b/src/main/resources/templates/image/image_upload.html
@@ -65,7 +65,7 @@
                     <div class="col-12">
                         <div class="mb-3">
                             <input type="submit" class="btn btn-primary" th:value="#{image.upload.button}" />
-                            <a href="#" th:href="@{/gallery/show}" class="btn btn-default" th:text="#{image.upload.toImageGallery}"></a>
+                            <a href="#" th:href="@{/gallery/show}" class="btn btn-light" th:text="#{image.upload.toImageGallery}"></a>
                         </div>
                     </div>
                 </div>
