--- a/src/main/resources/templates/info/edit_info.html
+++ b/src/main/resources/templates/info/edit_info.html
@@ -15,7 +15,7 @@
 	                    </textarea>
 	                    <br />
 	                    <button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
-	                    <a href="#" th:href="@{${'/info/' + infoCommand.name}}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
+	                    <a href="#" th:href="@{${'/info/' + infoCommand.name}}" class="btn btn-light" role="button" th:text="#{button.cancel}"></a>
 					</div>
 				</div>
 			</form>
