--- a/src/main/resources/templates/imexport/import_export.html
+++ b/src/main/resources/templates/imexport/import_export.html
@@ -14,7 +14,7 @@
                                 <span th:text="#{importexport.import.file}"></span>
                             </div>
                             <div class="card-body">
-                                <input id="jsonFile" type="file" th:field="*{jsonFile}" class="btn btn-default btn-file" />
+                                <input id="jsonFile" type="file" th:field="*{jsonFile}" class="btn btn-light btn-file" />
                                 <input type="submit" class="btn btn-primary mt-2" th:value="#{importexport.upload.button}" />
                             </div>
                         </div>
