--- a/src/main/resources/templates/profile/change_username.html
+++ b/src/main/resources/templates/profile/change_username.html
@@ -16,7 +16,7 @@
 						</div>
 						<div class="mb-3">
 							<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
-							<a href="#" th:href="@{/}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
+							<a href="#" th:href="@{/}" class="btn btn-light" role="button" th:text="#{button.cancel}"></a>
 						</div>
 					</div>
 				</div>
